2006-08-01  Hendrik Tews  <tews@debian>

	AST
	* support two embedded processors (for ocaml and c++) now
	* start ocaml embedded processor in ocsstr.{h,cc}

2006-07-31  Hendrik Tews  <tews@debian>

	* started to implement/use polymorphic 'a in ast nodes before
	hitting a more serious astgen lexing/parsing problem
	
	AST
	* polymorphicOcamlAST option to add 'a in all ast nodes

	ESLA
	* use polymorphicOcamlAST option 

2006-07-27  Hendrik Tews  <tews@debian>

	ELSA
	* finished caml roots debugging (regrtest passed)

2006-07-27  Hendrik Tews  <tews@tandem.cs.ru.nl>

	ELSA
	* finished detach for CType and templates
	* debug caml roots started

2006-07-27  Hendrik Tews  <tews@debian>

	AST:
	* finished astgen detachOcaml generation
	* added empty detach's for const types

	ELSA
	* added empty detach's for const types
	* Variable::detachOcaml finished
	* started detachOcaml in the CType hierarchy

2006-07-26  Hendrik Tews  <tews@tandem.cs.ru.nl>

	AST
	* started detachOcaml

2006-07-25  Hendrik Tews  <tews@debian>

	ASTGEN
	* moved ocaml_val into superclass (as protected)
	
	ELSA
	* cleanup some debuging output
	* the ocaml_val is only used in the following classes:
	  CompoundType CVAtomicType CompoundType_info Function ReferenceType
	  SimpleType Variable PointerType
	* longgest circular list 5266 (in/big/nsHTMLEditRules.i regtest 985)

2006-07-25  Hendrik Tews  <tews@tandem.cs.ru.nl>

	ELSA
	* nullable Function.body (in/big/nsAtomTable.i)
	* nullable NamedAtomicType.typedefVar (in/t0566.cc)
	* serialize PseudoInstantiation, TypeVariable, STemplateArgument
	* RENAMED STemplateArgument.value into sta_value
	* regtests pass

2006-07-25  Hendrik Tews  <tews@debian>

	ELSA
	* variable.var_name might be void
	* added EnumType::toOcaml
	* regression tests up to 568

2006-07-24  Hendrik Tews  <tews@debian>

	ELSA
	* identified another circularity (containing Function*)
	* regression tests up to 138

	* started support for circular structures