@@ -17,6 +17,9 @@ void OCSubstrate::reset(int initNest)
 {
   state = ST_NORMAL;
   nesting = initNest;
+  comment_nesting = 0;
+  star = false;
+  oparen = false;
   text.setlength(0);
 }
 
@@ -27,10 +30,13 @@ OCSubstrate::~OCSubstrate()
 
 void OCSubstrate::handle(char const *str, int len, char finalDelim)
 {
+# ifdef TEST_OCSSTR
   cout << "oc::handle \"" << substring(str, len) << "\"\n";
+# endif
   text.append(str, len);
 
   for (; len>0; len--,str++) {
+    // print_state();
     switch (state) {
     case ST_NORMAL:
       switch (*str) {
@@ -52,8 +58,12 @@ void OCSubstrate::handle(char const *str, int len, char finalDelim)
 
       case ')':
 	if(star) {
-	  if(comment_nesting == 0)
+	  if(comment_nesting == 0) {
+#           ifdef TEST_OCSSTR
+	    cout << "Error: lonely comment termination ``*)''" << endl;
+#           endif
 	    err->reportError("lonely comment termination ``*)''");
+	  }
 	  else
 	    comment_nesting--;
 	}
@@ -82,7 +92,14 @@ void OCSubstrate::handle(char const *str, int len, char finalDelim)
 	break;
 
       case '"':
+#       ifdef TEST_OCSSTR
+	cout << "Error: ocaml strings are not supported here" << endl;
+#       endif
 	err->reportError("ocaml strings are not supported here");
+	oparen = star = false;
+	break;
+
+      default:
 	oparen = star = false;
 	break;
       }
@@ -104,6 +121,10 @@ void OCSubstrate::handle(char const *str, int len, char finalDelim)
 	 *str == ' ' || *str == '\n' || *str == '\t' || *str == '\r')
 	state = ST_TICK_NEXT;
       else {
+#       ifdef TEST_OCSSTR
+	cout << "Error: ocaml syntax error or unsupported char constant" 
+	     << endl;
+#       endif
 	err->reportError("ocaml syntax error or unsupported char constant");
 	state = ST_NORMAL;
       }
@@ -115,11 +136,27 @@ void OCSubstrate::handle(char const *str, int len, char finalDelim)
 	state = ST_NORMAL;
       }
       // Yes: tick (') might occur in ocaml identifiers
-      if(isalnum(*str) || *str == '_' || 
-	 *str == ' ' || *str == '\n' || *str == '\t' || *str == '\r')
-	// read or expect a type variable; continue
+      else if(isalnum(*str) || *str == '_' || 
+	      *str == ' ' || *str == '\n' || *str == '\t' || *str == '\r' ||
+	      // permit all chars that can follow a typexpr
+	      *str == ';' || *str == '*' || *str == ')' || *str == '-' ||
+	      *str == '|' || *str == ']' || 
+	      *str == '&' || *str == '>' ||
+	      *str == ':' || *str == '=' ||
+	      *str == ',' 
+	      )
 	state = ST_NORMAL;
+      else if(*str == '}') {
+	xassert(comment_nesting == 0);
+	if(nesting == 0)
+	  xfailure("should have left this ocaml verbatim already");
+	nesting--;
+	state = ST_NORMAL;
+      }
       else {
+#       ifdef TEST_OCSSTR
+	cout << "Error: ocaml syntax error" << endl;
+#       endif
 	err->reportError("ocaml syntax error");
 	state = ST_NORMAL;
       }
@@ -128,20 +165,26 @@ void OCSubstrate::handle(char const *str, int len, char finalDelim)
     default:
       xfailure("unknown state");
     }
+
+#   ifdef TEST_OCSSTR_kk
+    cout << " -" << *str << "-> ";
+    print_state();
+    cout << endl;
+#   endif
   }
 }
 
 
 bool OCSubstrate::zeroNesting() const
 {
-  return state == ST_NORMAL && nesting == 0;
+  return nesting == 0 && comment_nesting == 0;
 }
 
 
 // not supported for embedded ocaml
 string OCSubstrate::getFuncBody() const
 {
-  xassert(false);
+  return text;
 }
 
 
@@ -155,6 +198,28 @@ string OCSubstrate::getDeclName() const
 // ------------------ test code -------------------
 #ifdef TEST_OCSSTR
 
+
+void OCSubstrate::print_state() {
+  switch(state) {
+  case OCSubstrate::ST_NORMAL: 
+    cout << "NORMAL";
+    break;
+  case OCSubstrate::ST_TICK: 
+    cout <<"TICK";
+    break;
+  case OCSubstrate::ST_TICK_NEXT: 
+    cout << "TICK_NEXT";
+    break;
+  default: 
+    cout << "??";
+  }
+  cout << "(nest: " << nesting 
+       << ", cnest: " << comment_nesting
+       << ", op: " << oparen
+       << ", *: " << star << ")";
+}
+
+
 #define OC OCSubstrate
 #define Test OCSubstrateTest
 
@@ -163,8 +228,10 @@ string OCSubstrate::getDeclName() const
 class Test {
 public:
   void feed(OC &oc, rostring src);
-  void test(rostring src, OC::State state, int nesting);
-  void normal(rostring src, int nesting);
+  void test(rostring src, OC::State state, int nesting, int comment_nesting);
+  void normal(rostring src, int nesting, int comment_nesting);
+  void yes(rostring src);
+  void no(rostring src);
   int main();
 };
 
@@ -185,28 +252,75 @@ void Test::feed(OC &oc, rostring origSrc)
 }
 
 
-void Test::test(rostring src, OC::State state, int nesting)
+void Test::test(rostring src, OC::State state, int nesting, int comment_nesting)
 {
   OC oc(&silentReportError);
   feed(oc, src);
 
   if (!( oc.state == state &&
-         oc.nesting == nesting)) {
+         oc.nesting == nesting &&
+	 oc.comment_nesting == comment_nesting &&
+	 silentReportError.errors == 0 &&
+	 silentReportError.warnings == 0)) {
     xfailure(stringc << "failed on src: " << src);
   }
 }
 
 
-void Test::normal(rostring src, int nesting)
+void Test::normal(rostring src, int nesting, int comment_nesting)
 {
-  test(src, OC::ST_NORMAL, nesting);
+  test(src, OC::ST_NORMAL, nesting, comment_nesting);
+}
+
+
+void Test::yes(rostring src)
+{
+  OC oc(&silentReportError);
+  feed(oc, src);
+
+  xassert(oc.zeroNesting()&&
+	  silentReportError.errors == 0 &&
+	  silentReportError.warnings == 0);
+}
+
+
+void Test::no(rostring src)
+{
+  OC oc(&silentReportError);
+  feed(oc, src);
+
+  xassert((!oc.zeroNesting()) &&
+	  silentReportError.errors == 0 &&
+	  silentReportError.warnings == 0);
 }
 
 
 int Test::main()
 {
   // quiet!
-  xBase::logExceptions = false;
+  xBase::logExceptions = true;
+
+  normal("'a'{ }", 0, 0);
+  normal("'a ", 0, 0);
+  normal("(*{ { * '*)", 0 ,0);
+  normal("let a'a' = 5", 0, 0);
+
+  yes("a'");
+  yes("'a");
+  yes("{ (* } *) }");
+  yes("type 'a x = { f : 'a; }");
+  yes("type 'a x = 'a* int");
+  yes("('a)");
+  yes("'a->'b");
+  yes("[> A of 'a| B of 'b]");
+  yes("[< `C|`A of 'a& 'b>`C]");
+  yes("(x:'a:>'b)");
+  yes("let a : 'a=5;;");
+  yes("['a,'b] classpath");
+  yes("<a : 'a;..>");
+  yes("{f:'a}");
+
+  no("{");
 
   cout << "\nocsstr: all tests PASSED\n";
 
