@@ -1,3 +1,7 @@
+2006-08-07  Hendrik Tews  <tews@debian>
+
+	* finished ocsstr processor
+
 2006-08-01  Hendrik Tews  <tews@debian>
 
 	AST
